--- a/css/styles.css
+++ b/css/styles.css
@@ -147,6 +147,7 @@
             padding: 0 3rem;
             position: relative;
             overflow: hidden;
+           padding-top:5rem;
         }
         
         .hero-content {
