Fix mobile-nav position to top of the viewport

--- a/css/styles.css
+++ b/css/styles.css
@@ -1426,7 +1426,7 @@
      .mobile-nav {
          display: none;
          position: fixed;
-         top: 80px;
+         top: 0;
          left: 0;
          right: 0;
          padding: 2rem;
