--- a/css/styles.css
+++ b/css/styles.css
@@ -1637,7 +1637,7 @@
          }
          
          .mobile-nav {
-             top: 70px;
+             top: 0;
              padding: 1.5rem;
          }
          
